<resources>
    <string name="app_name">D.R.O.P</string>
    <string name="device_battery">"Device Battery"</string>
    <string name="device_value">:12345</string>
    <string name="activity_key">"Detected Activity "</string>
    <string name="activity_value">:WALK/FALL/ETC</string>
    <string name="suhu">33^</string>
    <string name="last_time">00:00, 00/00/00</string>
    <string name="last_time_key">Device Last Online\nAt</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>